--- a/mystyle.css
+++ b/mystyle.css
@@ -15,13 +15,25 @@ body {
 header {
     background-color: #333;
     color: #fff;
-    padding: 10px 20px;
+    padding: 10px 0px;
+    margin-bottom: 10px; 
 }
+
+header img{
+    position: relative;
+    float: left;
+    margin-right: 20px;
+    width: 60px;
+    height: auto;
+    margin-bottom: -5px;
+}
+
+
 
 /* Styling the navigation menu */
 nav {
     background-color: #444;
-    padding: 10px;
+    padding: 10px 20px;
 }
 
 nav ul {
@@ -76,8 +88,19 @@ footer {
     background-color: #333;
     color: #ffffff;
     padding: 10px 40px;
-    height: 105vh;
+    height: 60vh;
+    position: relative;
 }
+
+.footer-img{
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    width: 180px;
+    height: auto;
+}
+
+
 
 /* Centering the "Begin Your Journey to Become Closer to God" link */
 .cta-button {
@@ -88,6 +111,11 @@ footer {
     padding: 10px 20px;
     color: #080808;
     text-decoration: none;
+    background-color: #cf6a6a;
+}
+
+.cta-button:hover{
+    background: rgb(255, 255, 255);
 }
 
 /* Styling the "Book an Appointment" link */
@@ -95,8 +123,26 @@ footer {
     display: inline-block;
     margin: 0 auto;
     text-align: center;
-    border: 2px solid #0a0a0a; /* Adding border */
+    border: 2px solid #000000; /* Adding border */
     padding: 10px 20px;
-    color: #080808;
+    color: rgb(0, 0, 0);
     text-decoration: none;
+    background-color: #cf6a6a;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.book-appointment:hover{
+    background: #ffffff;
+}
+
+#contact-email{
+    position: absolute;
+    top: 300px;
+    bottom: 10px; /* Adjust as needed */
+    right: 20px; /* Adjust as needed */
+    color: #fff; /* Set color to match footer text */
+    font-size: 14px; /* Adjust font size as needed */
 }
